[package]
name = "unibox"
version = "0.2.0"
authors = ["Andreu Santaren Llop <andreu.santaren@gmail.com>"]
edition = "2018"
description = "Universal Box that can store any type using static or dynamic memory."
license = "MIT"
repository = "https://github.com/asllop/unibox"
keywords = ["box", "type", "no_std", "static", "dynamic"]

[features]
default = ["alloc"]
alloc = []

[dependencies]
